updated column layouts

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@
 
 .block {
    height: 100%;
+   width: 100%;
+   border: 1px solid black;
+   display: inline-block;
 }
 
 .blue {
@@ -33,28 +36,70 @@
 .orange {
     background: orange;
 }
-.col-12, .col-9, .col-6, .col-3 {
-    width: 100%;
-    overflow: hidden;
-    border: 1px solid black;
-    margin: 20px 0;
-}
-.col-12 > * {
-    width: calc(100%/12);
-    float: left;
+
+.row{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1px;
 }
 
-.col-9 > * {
-    width: calc(100%/9);
-    float: left;
+.col {
+    
+}
+.col-1, .col-2, .col-3, .col-4,
+.col-5, .col-6, .col-7, .col-8,
+.col-9, .col-10, .col-11, .col-12 {
+    display: flex;
+}
+.col-1 {
+    grid-column: span 1;
 }
 
-.col-6 > * {
-    width: calc(100%/6);
-    float: left;
+.col-2 {
+    grid-column: span 2;
 }
 
-.col-3 > * {
-    width: calc(100%/3);
-    float: left;
+.col-3 {
+    grid-column: span 3;
 }
+.col-4 {
+    grid-column: span 4;
+}
+
+.col-5 {
+    grid-column: span 5;
+}
+.col-6 {
+    grid-column: span 6;
+}
+.col-7 {
+    grid-column: span 7;
+}
+.col-8 {
+    grid-column: span 8;
+}
+.col-9 {
+    grid-column: span 9;
+}
+
+.col-10 {
+    grid-column: span 10;
+}
+
+.col-11 {
+    grid-column: span 11;
+}
+
+.col-12 {
+    grid-column: span 12;
+}
+
+@media screen and (max-device-width: 576px) {
+    .row.sm {
+        grid-template-columns: 1fr;
+        background: teal;
+    }
+}
+
+
+
