--- a/style.css
+++ b/style.css
@@ -52,7 +52,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-1 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-1 {
+  width: calc((((100%)/12) * 1) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-1 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-1 {
+  width: calc((((100%)/12) * 1) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-1 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-1 {
+  width: calc((((100%)/12) * 1) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-1 {
+    width: calc((((100%)/12) * 1) - 30px);
   }
 }
 .col-xs-2 {
@@ -64,7 +100,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-2 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-2 {
+  width: calc((((100%)/12) * 2) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-2 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-2 {
+  width: calc((((100%)/12) * 2) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-2 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-2 {
+  width: calc((((100%)/12) * 2) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-2 {
+    width: calc((((100%)/12) * 2) - 30px);
   }
 }
 .col-xs-3 {
@@ -76,7 +148,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-3 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-3 {
+  width: calc((((100%)/12) * 3) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-3 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-3 {
+  width: calc((((100%)/12) * 3) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-3 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-3 {
+  width: calc((((100%)/12) * 3) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-3 {
+    width: calc((((100%)/12) * 3) - 30px);
   }
 }
 .col-xs-4 {
@@ -88,7 +196,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-4 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-4 {
+  width: calc((((100%)/12) * 4) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-4 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-4 {
+  width: calc((((100%)/12) * 4) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-4 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-4 {
+  width: calc((((100%)/12) * 4) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-4 {
+    width: calc((((100%)/12) * 4) - 30px);
   }
 }
 .col-xs-5 {
@@ -100,7 +244,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-5 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-5 {
+  width: calc((((100%)/12) * 5) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-5 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-5 {
+  width: calc((((100%)/12) * 5) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-5 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-5 {
+  width: calc((((100%)/12) * 5) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-5 {
+    width: calc((((100%)/12) * 5) - 30px);
   }
 }
 .col-xs-6 {
@@ -112,7 +292,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-6 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-6 {
+  width: calc((((100%)/12) * 6) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-6 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-6 {
+  width: calc((((100%)/12) * 6) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-6 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-6 {
+  width: calc((((100%)/12) * 6) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-6 {
+    width: calc((((100%)/12) * 6) - 30px);
   }
 }
 .col-xs-7 {
@@ -124,7 +340,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-7 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-7 {
+  width: calc((((100%)/12) * 7) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-7 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-7 {
+  width: calc((((100%)/12) * 7) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-7 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-7 {
+  width: calc((((100%)/12) * 7) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-7 {
+    width: calc((((100%)/12) * 7) - 30px);
   }
 }
 .col-xs-8 {
@@ -136,7 +388,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-8 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-8 {
+  width: calc((((100%)/12) * 8) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-8 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-8 {
+  width: calc((((100%)/12) * 8) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-8 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-8 {
+  width: calc((((100%)/12) * 8) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-8 {
+    width: calc((((100%)/12) * 8) - 30px);
   }
 }
 .col-xs-9 {
@@ -148,7 +436,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-9 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-9 {
+  width: calc((((100%)/12) * 9) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-9 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-9 {
+  width: calc((((100%)/12) * 9) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-9 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-9 {
+  width: calc((((100%)/12) * 9) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-9 {
+    width: calc((((100%)/12) * 9) - 30px);
   }
 }
 .col-xs-10 {
@@ -160,7 +484,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-10 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-10 {
+  width: calc((((100%)/12) * 10) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-10 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-10 {
+  width: calc((((100%)/12) * 10) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-10 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-10 {
+  width: calc((((100%)/12) * 10) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-10 {
+    width: calc((((100%)/12) * 10) - 30px);
   }
 }
 .col-xs-11 {
@@ -172,7 +532,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-11 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-11 {
+  width: calc((((100%)/12) * 11) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-11 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-11 {
+  width: calc((((100%)/12) * 11) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-11 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-11 {
+  width: calc((((100%)/12) * 11) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-11 {
+    width: calc((((100%)/12) * 11) - 30px);
   }
 }
 .col-xs-12 {
@@ -184,7 +580,43 @@
 
 @media screen and (max-width: 768px) {
   .col-xs-12 {
-    width: 100%;
+    width: calc(100% - 30px);
+  }
+}
+.col-sm-12 {
+  width: calc((((100%)/12) * 12) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 991px) {
+  .col-sm-12 {
+    width: calc(100% - 30px);
+  }
+}
+.col-md-12 {
+  width: calc((((100%)/12) * 12) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1199px) {
+  .col-md-12 {
+    width: calc(100% - 30px);
+  }
+}
+.col-lg-12 {
+  width: calc((((100%)/12) * 12) - 30px);
+  float: left;
+  margin: 0 15px;
+  border: 1px solid black;
+}
+
+@media screen and (min-width: 1200px) {
+  .col-lg-12 {
+    width: calc((((100%)/12) * 12) - 30px);
   }
 }
 
