basic grid framework finished

--- a/style.css
+++ b/style.css
@@ -1,40 +1,60 @@
-* {
-  padding: 0;
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
+  padding: 0;
+  border: 0;
   font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+* {
   text-decoration: none;
   box-sizing: border-box;
-}
-
-.block {
-  border: 1px solid black;
-  width: 100px;
-  height: 25px;
-  display: inline-block;
-}
-
-.blue {
-  background: blue;
-}
-
-.red {
-  background: red;
-}
-
-.green {
-  background: green;
-}
-
-.yellow {
-  background: yellow;
-}
-
-.purple {
-  background: purple;
-}
-
-.orange {
-  background: orange;
 }
 
 .row {
@@ -47,7 +67,6 @@
   width: calc((((100%)/12) * 1) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -59,7 +78,6 @@
   width: calc((((100%)/12) * 1) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -71,7 +89,6 @@
   width: calc((((100%)/12) * 1) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -83,7 +100,6 @@
   width: calc((((100%)/12) * 1) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -95,7 +111,6 @@
   width: calc((((100%)/12) * 2) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -107,7 +122,6 @@
   width: calc((((100%)/12) * 2) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -119,7 +133,6 @@
   width: calc((((100%)/12) * 2) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -131,7 +144,6 @@
   width: calc((((100%)/12) * 2) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -143,7 +155,6 @@
   width: calc((((100%)/12) * 3) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -155,7 +166,6 @@
   width: calc((((100%)/12) * 3) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -167,7 +177,6 @@
   width: calc((((100%)/12) * 3) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -179,7 +188,6 @@
   width: calc((((100%)/12) * 3) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -191,7 +199,6 @@
   width: calc((((100%)/12) * 4) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -203,7 +210,6 @@
   width: calc((((100%)/12) * 4) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -215,7 +221,6 @@
   width: calc((((100%)/12) * 4) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -227,7 +232,6 @@
   width: calc((((100%)/12) * 4) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -239,7 +243,6 @@
   width: calc((((100%)/12) * 5) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -251,7 +254,6 @@
   width: calc((((100%)/12) * 5) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -263,7 +265,6 @@
   width: calc((((100%)/12) * 5) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -275,7 +276,6 @@
   width: calc((((100%)/12) * 5) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -287,7 +287,6 @@
   width: calc((((100%)/12) * 6) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -299,7 +298,6 @@
   width: calc((((100%)/12) * 6) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -311,7 +309,6 @@
   width: calc((((100%)/12) * 6) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -323,7 +320,6 @@
   width: calc((((100%)/12) * 6) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -335,7 +331,6 @@
   width: calc((((100%)/12) * 7) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -347,7 +342,6 @@
   width: calc((((100%)/12) * 7) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -359,7 +353,6 @@
   width: calc((((100%)/12) * 7) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -371,7 +364,6 @@
   width: calc((((100%)/12) * 7) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -383,7 +375,6 @@
   width: calc((((100%)/12) * 8) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -395,7 +386,6 @@
   width: calc((((100%)/12) * 8) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -407,7 +397,6 @@
   width: calc((((100%)/12) * 8) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -419,7 +408,6 @@
   width: calc((((100%)/12) * 8) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -431,7 +419,6 @@
   width: calc((((100%)/12) * 9) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -443,7 +430,6 @@
   width: calc((((100%)/12) * 9) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -455,7 +441,6 @@
   width: calc((((100%)/12) * 9) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -467,7 +452,6 @@
   width: calc((((100%)/12) * 9) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -479,7 +463,6 @@
   width: calc((((100%)/12) * 10) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -491,7 +474,6 @@
   width: calc((((100%)/12) * 10) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -503,7 +485,6 @@
   width: calc((((100%)/12) * 10) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -515,7 +496,6 @@
   width: calc((((100%)/12) * 10) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -527,7 +507,6 @@
   width: calc((((100%)/12) * 11) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -539,7 +518,6 @@
   width: calc((((100%)/12) * 11) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -551,7 +529,6 @@
   width: calc((((100%)/12) * 11) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -563,7 +540,6 @@
   width: calc((((100%)/12) * 11) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
@@ -575,7 +551,6 @@
   width: calc((((100%)/12) * 12) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 768px) {
@@ -587,7 +562,6 @@
   width: calc((((100%)/12) * 12) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 991px) {
@@ -599,7 +573,6 @@
   width: calc((((100%)/12) * 12) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (max-width: 1199px) {
@@ -611,7 +584,6 @@
   width: calc((((100%)/12) * 12) - 30px);
   float: left;
   margin: 0 15px;
-  border: 1px solid black;
 }
 
 @media screen and (min-width: 1200px) {
